--- a/Source/SizeOnDisk/Localization.resx
+++ b/Source/SizeOnDisk/Localization.resx
@@ -379,4 +379,10 @@
   <data name="PermanentDelete" xml:space="preserve">
     <value>_Permanent Delete</value>
   </data>
+  <data name="EditKey" xml:space="preserve">
+    <value>Ctrl+E</value>
+  </data>
+  <data name="EditText" xml:space="preserve">
+    <value>_Edit</value>
+  </data>
 </root>
