--- a/Source/SizeOnDisk/Localization.pt.resx
+++ b/Source/SizeOnDisk/Localization.pt.resx
@@ -135,7 +135,7 @@
   <data name="DiskSize" xml:space="preserve">
     <value>Tamanho em disco</value>
   </data>
-  <data name="FileCount" xml:space="preserve">
+  <data name="FileTotal" xml:space="preserve">
     <value>Numero de arquivos</value>
   </data>
   <data name="FileSize" xml:space="preserve">
@@ -147,7 +147,7 @@
   <data name="Finished" xml:space="preserve">
     <value>Finalizado</value>
   </data>
-  <data name="FolderCount" xml:space="preserve">
+  <data name="FolderTotal" xml:space="preserve">
     <value>Número de Pastas</value>
   </data>
   <data name="HardDriveUsage" xml:space="preserve">
