--- a/Source/SizeOnDisk/Localization.fa.resx
+++ b/Source/SizeOnDisk/Localization.fa.resx
@@ -129,7 +129,7 @@
   <data name="DiskSize" xml:space="preserve">
     <value>اندازه ی دیسک</value>
   </data>
-  <data name="FileCount" xml:space="preserve">
+  <data name="FileTotal" xml:space="preserve">
     <value>تعداد فایل ها</value>
   </data>
   <data name="FileSize" xml:space="preserve">
@@ -138,7 +138,7 @@
   <data name="Finished" xml:space="preserve">
     <value>تکمیل شد</value>
   </data>
-  <data name="FolderCount" xml:space="preserve">
+  <data name="FolderTotal" xml:space="preserve">
     <value>تعداد فولدرها</value>
   </data>
   <data name="HardDriveUsage" xml:space="preserve">
