--- a/Source/SizeOnDisk/Localization.fr.resx
+++ b/Source/SizeOnDisk/Localization.fr.resx
@@ -390,4 +390,13 @@
   <data name="PrintTo" xml:space="preserve">
     <value>Imprimer vers</value>
   </data>
+  <data name="Files" xml:space="preserve">
+    <value>Nombre fichiers</value>
+  </data>
+  <data name="Folders" xml:space="preserve">
+    <value>Nombre de dossiers</value>
+  </data>
+  <data name="OpenAsText" xml:space="preserve">
+    <value>Ouvrir le texte</value>
+  </data>
 </root>
