--- a/Source/SizeOnDisk/Localization.resx
+++ b/Source/SizeOnDisk/Localization.resx
@@ -392,4 +392,13 @@
   <data name="PrintTo" xml:space="preserve">
     <value>Print to</value>
   </data>
+  <data name="Files" xml:space="preserve">
+    <value>Number of files</value>
+  </data>
+  <data name="Folders" xml:space="preserve">
+    <value>Number of folders</value>
+  </data>
+  <data name="OpenAsText" xml:space="preserve">
+    <value>Open as text</value>
+  </data>
 </root>
